# OF_DIS_cuda

./: .gitignore  CMakeLists.txt  CUDA_PORTING_DOC.md  FURTHER_PARALLELIZATION_OPPORTUNITIES.md  benchmark_summary.csv  compile.sh  oflow.cpp  oflow.h  patch.cpp  patch.cpp_debug_snippet.cpp  patch.h  patchgrid.cpp  patchgrid.h  patchgrid_cuda.cu  patchgrid_cuda.h  refine_variational_cuda.cu  refine_variational_cuda.h  run_dense_parallel.cpp  temp_pair_list_gpu_ind.txt
benchmark/: README.md  analyze_results.py  generate_stats.py  pair_list.txt
benchmark/scripts/: common.sh  run_all_cpu.sh  run_all_gpu.sh  run_cpu_individual.sh  run_cpu_throughput.sh  run_gpu_individual.sh  run_gpu_throughput.sh  temp_pair_list_cpu_ind.txt  temp_pair_list_gpu_ind.txt  visualize_flow.sh
